package hu.bme.aut.saturn.education.persistence.enums;

public enum CourseType {
    LECTURE,
    PRACTICE,
    LABORATORY,
    EXAM
}
