@startuml
'https://plantuml.com/object-diagram

class Subject {
    name: string
    courses: List<Course>
    responsiblePeople: List<Teacher>
}

Subject --u Teacher : responsiblePeople
Subject *-- Course : courses

class Course {
    name: string
    courseType: CourseType
    teachers: List<Teacher>
    students: List<Student>
    classes: List<Class>
}

Course *-- Class : classes
Course --r Student : students
Course -- Teacher : teachers

class Class {
    dayOfTheWeek: Integer
    startTime: DateTime
    lengthInMinutes: Integer
}

Course --> CourseType

enum CourseType {
    LECTURE
    PRACTICE
    LABORATORY
    EXAM
}

class User {
    firstName: string
    lastName: string
    dateOfBirth: Date
    otherInfo: string
    student: Student
    teacher: Teacher
    manager: Manager
}

class Student {
    courses: List<Course>
    classes: List<Class>
}

class Teacher {
}

class Manager {
}

Student -- Course: courses
Student -- Class : classes
Student --u* User
Teacher --u* User
Manager --u* User

@enduml
